desc : feat Add feature and styling

--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
        Contact : <input type="number" name="phone" id="phone">
        <input type="submit">
     </form>
+    <footer>
+        This is a footer
+    </footer>
 </body>
 </html>
